argocd/commentator-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commentator-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: commentator-app
  template:
    metadata:
      labels:
        app: commentator-app
    spec:
      containers:
      - name: commentator
        image: ghcr.io/resonant-dev/commentator/commentator:v0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
