argocd/commentator-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: commentator-app
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: commentator-app
