argocd/commentator-app-ingress-crd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: commentator-app
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`commentator.sbx1.resonant.dev`)
      services:
        - name: commentator-app
          port: 4000
  tls:
    certResolver: le
